# ableton-mcp-pro

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  MIX_REPORT.md  NEXT_STEPS.md  README.md  SKILL_AUTHORING_GUIDE.md  memory.md  mes_refs_profile.json  pyproject.toml
.claude/skills/acid-bass/: SKILL.md
.claude/skills/ambient/: SKILL.md
.claude/skills/drum-swing/: SKILL.md
.claude/skills/ethereal-pads/: SKILL.md
.claude/skills/growl-bass/: SKILL.md
.claude/skills/hardgroove-bass/: SKILL.md
.claude/skills/hardgroove-drums/: SKILL.md
.claude/skills/house-chords/: SKILL.md
.claude/skills/house-drums/: SKILL.md
.claude/skills/mixing-guide/: SKILL.md
.claude/skills/mixing-guide-mindpath/: SKILL.md
.claude/skills/mixing-guide-mindpath/scripts/: analyze_audio.py  make_profile.py  make_rumble.py  mix_tests.py
.claude/skills/reese-bass/: SKILL.md
.claude/skills/speed-garage/: SKILL.md
.claude/skills/supersaw-chords/: SKILL.md
.claude/skills/synthwave/: SKILL.md
.claude/skills/techno-bass/: SKILL.md
.claude/skills/techno-drums/: SKILL.md
.claude/skills/track-arrangement/: SKILL.md
.claude/skills/trance-bass/: SKILL.md
.claude/skills/trance-melodies/: SKILL.md
.claude/skills/ukg-drums/: SKILL.md
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: server.py
docs/superpowers/plans/: 2026-07-04-house-to-techno-arrangement.md
docs/superpowers/specs/: 2026-07-04-house-to-techno-arrangement-design.md
tools/: README.md  midigenai_bridge.py
